--- a/frontend-app/index.html
+++ b/frontend-app/index.html
@@ -2,8 +2,9 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="/public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>App de Torneos</title>
+    <title>Gestorneos</title>
   </head>
   <body>
     <div id="root"></div>
